[#53] 🔧 Chore: Sentry에 전송되는 메시지 커스텀
- title은 errrorCode, subtitle은 message로 표시되도록 설정